<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".features.phone_call.view.CallFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="120dp">

        <TextView
            android:id="@+id/txtCallTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/incoming_call"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCallNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCallTitleLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txtCallNumberScam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCallNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/warning_potential_scam"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:visibility="invisible" />

        <com.gauravbhola.ripplepulsebackground.RipplePulseLayout
            android:id="@+id/rplCall"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/txtCallNumberScam"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clipChildren="false"
            ripple:duration="1000"
            ripple:endRadius="100dp"
            ripple:rippleColor="#3D66C7"
            ripple:rippleType="fill"
            ripple:startRadius="42dp"
            ripple:strokeWidth="2dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/round_image_blue"
                android:padding="36dp"
                android:src="@drawable/ic_phone" />
        </com.gauravbhola.ripplepulsebackground.RipplePulseLayout>

        <TextView
            android:id="@+id/txtCallNumberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rplCall"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingEnd="@dimen/item_padding_standard"
            android:paddingStart="@dimen/item_padding_standard"
            android:text="@string/call_number_info_text"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rplCall"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivCallTrusted"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_image"
                    android:elevation="6dp"
                    android:padding="@dimen/call_action_icon_padding_all"
                    android:src="@drawable/ic_trusted_circle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivCallSuspicious"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/round_image"
                    android:padding="@dimen/call_action_icon_padding_all"
                    android:src="@drawable/ic_suspicious_circle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivCallBlocked"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/round_image"
                    android:padding="@dimen/call_action_icon_padding_all"
                    android:src="@drawable/ic_blocked_circle" />
            </FrameLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>